arrange style of Projects

--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,6 +1,6 @@
 = form_for @project do |f|
   - if @project.errors.any?
-    #error_explanation
+    .alert.alert-error
       %h2= "#{pluralize(@project.errors.count, "error")} prohibited this project from being saved:"
       %ul
         - @project.errors.full_messages.each do |msg|
@@ -13,4 +13,4 @@
     = f.label :description
     = f.text_area :description
   .actions
-    = f.submit 'Save'
+    = f.submit 'Save', class: 'btn btn-primary'
