--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -2,6 +2,5 @@
 
 = render 'form'
 
-= link_to 'Show', @project
-\|
-= link_to 'Back', projects_path
+= link_to 'Show', @project, class: 'btn'
+= link_to 'Back', projects_path, class: 'btn'
