--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -1,12 +1,11 @@
-%p#notice= notice
+- if notice.present?
+  .alert.alert-info
+    = notice
 
-%p
-  %b Name:
+%h2
   = @project.name
-%p
-  %b Description:
-  = @project.description
+.well
+  = simple_format @project.description
 
-= link_to 'Edit', edit_project_path(@project)
-\|
-= link_to 'Back', projects_path
+= link_to 'Edit', edit_project_path(@project), class: 'btn'
+= link_to 'Back', projects_path, class: 'btn'
