--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,21 +1,24 @@
 %h1 Listing pages
 
-%table
-  %tr
-    %th Name
-    %th Objects
-    %th
-    %th
-    %th
-
-  - @pages.each do |page|
+- if @pages.any?
+  %table.table.table-striped
     %tr
-      %td= page.name
-      %td= page.objects
-      %td= link_to 'Show', page
-      %td= link_to 'Edit', edit_page_path(page)
-      %td= link_to 'Destroy', page, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %th Name
+      %th Objects
+      %th
+      %th
+      %th
 
-%br
+    - @pages.each do |page|
+      %tr
+        %td= page.name
+        %td= page.objects
+        %td= link_to 'Show', [@project, page]
+        %td= link_to 'Edit', edit_project_page_path(@project, page)
+        %td= link_to 'Destroy', [@project, page], method: :delete, data: { confirm: 'Are you sure?' }
 
-= link_to 'New Page', new_page_path
+  %br
+
+= link_to 'New Page', new_project_page_path(@project), class: 'btn btn-primary'
+
+= link_to 'Project List', projects_path, class: 'btn'
