--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -7,6 +7,6 @@
   %b Objects:
   = @page.objects
 
-= link_to 'Edit', edit_page_path(@page)
+= link_to 'Edit', edit_project_page_path(@project, @page)
 \|
-= link_to 'Back', pages_path
+= link_to 'Back', project_pages_path(@project)
